@@ -34,6 +34,7 @@ Changes in 2.8
 - date & select student/user fields, add required attribute when required in Inputs.php & Date.php
 - propose to create user in Moodle: if the users have not been rolled yet in Moodle/functions.php
 - Move assets/ & locale paths from config.inc.php to Warehouse.php
+- Activate links in Events descriptions in Portal.php & Calendar.php
 
 Upgrade from 2.7.x
 ------------------
